crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__group_cap_with_overflow.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 9
 ──────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0    ⢿ 0   ○ 9

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌○ codex                           ▐
▌  task-0                          ▐
▎○ codex                           🮇
▎  task-1                          🮇
▎○ codex                           🮇
▎  task-2                          🮇
▎○ codex                           🮇
▎  task-3                          🮇
▎○ codex                           🮇
▎  task-4                          🮇
▎○ codex                           🮇
▎  task-5                          🮇
▎  +3 more                         🮇












 ──────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0     $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0     $0.00

    Alt+p sidebar/back · ? for help
