crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__help_overlay_floating_box.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────────────────────────────────────────────────────────────
 ? 1   ! 0   ⏸︎ 0   ✓ 0                                                ⢿ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌? codex                                                                       ▐
▌  allow?                                                                      ▐
▌  ▢ ────────────────────────────────────────────────────────────────────    0%▐


                                       ╭ help ─────────────────────────────────╮
                                       │ keys                                  │
                                       │ ↕ j/k rows          ↕ J/K   worktrees │
                                       │ ↕ g/G ends          ↕ ^f/^b page      │
                                       │ ↕ H/L screen        ⏎ l     focus     │
                                       │ ⏎ 1-9 direct        ␣ n/N   needs-you │
                                       │ ✉ m   read/unread   ✉ M     read all  │
                                       │ ↔ ←/→ account tabs  ⟳ r     reload    │
                                       │ ✕ x   dismiss                         │
                                       │                                       │
                                       │ filter                                │
                                       │ ? q   waiting       ! e     attention │
                                       │ ⏸︎ p   paused        ✓ d     done      │
                                       │ ⢿ w   working       ○ o     idle      │
                                       │ ● u   unread        ≡ a     all       │
                                       │                                       │
                                       │ ▐ Alt+p sidebar/back                  │
                                       ╰────────── any key to close ───────────╯
 ──────────────────────────────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                                 $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                                 $0.00

                                                Alt+p sidebar/back · ? for help
