crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__l0_density_minimal_row.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ codex               ▐
▌  compile             ▐
 ──────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 $0.00
  M: ◎ 0  ◇ 0 ↘ 0 $0.00

      Alt+p sidebar · ?
