crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__process_row_resource_stats.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                    ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 0                                              $0.00
 ──────────────────────────────────────────────────────

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ cargo                       C  34%  M 512M  ⇅   8M/s▐
▌  cargo build --release                               ▐
 ──────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                         $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                         $0.00

                        Alt+p sidebar/back · ? for help
