crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__scroll_offset_follows_selection_to_bottom.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 6                            $0.00
 ────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0      ⢿ 6   ○ 0

   task-2
   ▢ ──────────────────────────    0%
   ▤ 0

▎⑂ beta ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▎⣾ codex                             🮇
▎  task-3                            🮇
▎  ▢ ──────────────────────────    0%🮇
▎  ▤ 0                               🮇
▎⣾ codex                             🮇
▎  task-4                            🮇
▎  ▢ ──────────────────────────    0%🮇
▎  ▤ 0                               🮇
▌⣾ codex                             ▐
▌  task-5                            ▐
▌  ▢ ──────────────────────────    0%▐
▌  ▤ 0                               ▐
 ────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00

      Alt+p sidebar/back · ? for help
